# mathematics

./: .gitignore  Jenkinsfile  Jenkinsfile.java  Jenkinsfile.js  README.md  azure-pipelines-dependencies.yml  azure-pipelines-setup.yml  azure-pipelines.yml  conftest.py  math.sln  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat  mathematics.algebra.rst  mathematics.calculus.rst  mathematics.finite_difference.rst  mathematics.notation.rst  mathematics.number_theory.rst  mathematics.rst  modules.rst  references.bib  sphinx-apidoc-helper.bat  zbibliography.rst
math/: math.pyproj
math/notation/: multi_index.py
math/number_theory/: combinatorics.py
mathematics/: fysik.md
mathematics/algebra/: __init__.py  clifford.py  create.py  dual.py  exterior_algebra.py  matrix.py  pointwise.py  tensor.py  test_clifford.py  test_matrix.py  test_tensor.py  vector.py
mathematics/calculus/: calculus.py  pointwise_calculus.py  taylor_expansion.py  test_calculus.py  test_pointwise_calculus.py
mathematics/finite_difference/: differential.py  schema.py  test_differential.py  test_schema.py
mathematics/logic/: interactive.py  sequent_calculus.md  sequent_calculus.py
mathematics/notation/: multi_index.py  test_multi_index.py
mathematics/number_theory/: combinatorics.py  test_combinatorics.py
mathematics/numerical_methods/: butcher_tableu.py  implicit_method.md  ode_solver.py  ode_step.py  root_finder.py  (+1 more)
src/: remove.py
tests/: __init__.py  conftest.py  decorators.py  pytest.ini  test_mathematics.py  user_verdict.py
(+48 files in other folders)
