[tool.poetry]
name = "mathematics"
version = "0.1.0"
description = ""
authors = ["emilberwald"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.18.0"
networkx = "^2.4"
scipy = "^1.4.1"
sympy = "^1.5"
graphviz = "^0.13.2"
pylatexenc = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"
pyside2 = "^5.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
