[tool.poetry]
name = 'mathematics'
version = '0.1.0'
description = ''
authors = ['emilberwald']

[tool.poetry.dependencies]
python = '~3.8'
numpy = '^1.18.0'
networkx = '^2.4'
scipy = '^1.4.1'
sympy = '^1.5'
graphviz = '^0.13.2'
pylatexenc = '^2.1'

[tool.poetry.dependencies.sphinx]
version = '^2.3.1'
optional = true

[tool.poetry.dependencies.sphinxcontrib-bibtex]
version = '^1.0.0'
optional = true

[tool.poetry.dev-dependencies]
pytest = '^5.2'
pyside2 = '^5.14.0'

[tool.poetry.extras]
doc = [
    'sphinx',
    'sphinxcontrib-bibtex',
]

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
